@@ -4,3 +4,4 @@
 <!ENTITY verify-button "Verify">
 <!ENTITY open-button "Open">
 <!ENTITY save-button "Save">
+<!ENTITY cryptandsign-button "Crypt and sign">
